// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page correctly renders a global element 1`] = `
.ms-1sr6xt0 {
  max-width: 100%;
}

@media only screen and (min-width: 769px) {
  .ms-1sr6xt0 {
    width: 700px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1sr6xt0 {
    width: 700px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1sr6xt0 {
    width: 700px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1k2coha {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1k2coha {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1k2coha {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

.ms-1azh6ix {
  margin: 0;
}

@media only screen and (min-width: 769px) {
  .ms-eqo5dg {
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-eqo5dg {
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (max-width: 575px) {
  .ms-eqo5dg {
    font-family: Lato;
    font-size: 16px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}


<div
  class="ms-1sr6xt0 ms-1k2coha"
  id="title"
>
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="ms-1azh6ix ms-1tpak8y"
    >
      <span
        class="ms-eqo5dg"
      >
        About Us
      </span>
    </p>
  </div>
</div>
`;

exports[`Page correctly renders a localized global element 1`] = `
.ms-1sr6xt0 {
  max-width: 100%;
}

@media only screen and (min-width: 769px) {
  .ms-1sr6xt0 {
    width: 700px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1sr6xt0 {
    width: 700px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1sr6xt0 {
    width: 700px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1k2coha {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1k2coha {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1k2coha {
    margin-top: 40px;
    margin-right: auto;
    margin-bottom: 20px;
    margin-left: auto;
  }
}

.ms-1azh6ix {
  margin: 0;
}

@media only screen and (min-width: 769px) {
  .ms-eqo5dg {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-eqo5dg {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 30px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}

@media only screen and (max-width: 575px) {
  .ms-eqo5dg {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
    font-weight: 700;
    line-height: 1.5;
    font-style: initial;
  }
}


<div
  class="ms-1sr6xt0 ms-1k2coha"
  id="title"
>
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="ms-1azh6ix ms-1tpak8y"
    >
      <span
        class="ms-eqo5dg"
      >
        À propos de nous
      </span>
    </p>
  </div>
</div>
`;
